tests/fixtures/errors/e0811_const_if_not_const.mimz
// expect: E0811
module M {
    in a: bit
    out b: bit
    const if (a) {
        wire extra: bit = 0
    }
    b = 0
}
